[package]
name = "git-auto-pilot"
version = "0.1.0"
edition = "2021"

[dependencies]
byteutils = "0.1.0"
dir = "0.1.2"
git2 = "0.19.0"
notify = "7.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
clap = "4.5.21"
fern = { version = "0.7.0", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.22"
